--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -53,11 +53,10 @@
 				<!--<p>-->
 					<!--The first book content-->
 						<h1 id="circe">Circe (Madeline Miller, 2018)</h1>
-						<p>“Monsters are a boon for gods. Imagine all the prayers.” So says Circe, a sly, petulant, and finally commanding voice that narrates the entirety of Miller’s dazzling second novel. The writer returns to Homer, the wellspring that led her to an Orange Prize for The Song of Achilles (2012). This time, she dips into The Odyssey for the legend of Circe, a nymph who turns Odysseus’ crew of men into pigs. Readers will relish following the puzzle of this unpromising daughter of the sun god Helios. It takes banishment to the island Aeaea for Circe to sense her calling as a sorceress: “I stepped into those woods and my life began.” This lonely, scorned figure learns herbs and potions, surrounds herself with lions, and, in a heart-stopping chapter, outwits the monster Scylla to propel Daedalus and his boat to safety. She makes lovers of Hermes and then two mortal men. Circe’s fascination with mortals becomes the book’s marrow and delivers its thrilling ending. All the while, the supernatural sits intriguingly alongside “the tonic of ordinary things.”
-							<figure class="CirceDustJacket">
+						<figure class="CirceDustJacket">
 								<img alt="Dust jacket image for Circe, stylized Greek female face in gold and black." src="images/CirceIMG.png">
-							</figure>
-						</p>
+						</figure>
+						<p>“Monsters are a boon for gods. Imagine all the prayers.” So says Circe, a sly, petulant, and finally commanding voice that narrates the entirety of Miller’s dazzling second novel. The writer returns to Homer, the wellspring that led her to an Orange Prize for The Song of Achilles (2012). This time, she dips into The Odyssey for the legend of Circe, a nymph who turns Odysseus’ crew of men into pigs. Readers will relish following the puzzle of this unpromising daughter of the sun god Helios. It takes banishment to the island Aeaea for Circe to sense her calling as a sorceress: “I stepped into those woods and my life began.” This lonely, scorned figure learns herbs and potions, surrounds herself with lions, and, in a heart-stopping chapter, outwits the monster Scylla to propel Daedalus and his boat to safety. She makes lovers of Hermes and then two mortal men. Circe’s fascination with mortals becomes the book’s marrow and delivers its thrilling ending. All the while, the supernatural sits intriguingly alongside “the tonic of ordinary things.”</p>
 						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>
 					<!--The second book content-->
 						<h2 id="kavandclay">The Amazing Adventures of Kavalier and Clay (Michael Chabon, 2000)</h2>
@@ -73,14 +72,6 @@
 						</figure>
 						<p>At the dawn of the 1960s, Elizabeth Zott finds herself in an unexpected position. She's the star of a television program called Supper at Six that has taken American housewives by storm, but it's certainly not what the crass station head envisions: “ 'Meaningful?' Phil snapped. 'What are you? Amish? As for nutritious: no. You’re killing the show before it even gets started.’” Elizabeth is a chemist, recently forced to leave the lab where she was doing important research due to an out-of-wedlock pregnancy. Now she's reduced to explaining things like when to put the steak in the pan. If ever a woman was capable of running her own life, it's Elizabeth. But because it's the 1950s, then the '60s, men have their sweaty paws all over both her successes and failures. On the plus side, there's Calvin Evans, world-famous chemist, love of her life, and father of her child; also Walter Pine, her friend who works in television; and a journalist who at least tries to do the right thing. This is the kind of book that has a long-buried secret at a corrupt orphanage with a mysterious benefactor as well as an extremely intelligent dog named Six-Thirty, recently retired from the military. Garmus' energetic debut also features an invigorating subplot about rowing.</p>
 						<p>--<a href="https://www.kirkusreviews.com/book-reviews/bonnie-garmus/lessons-chemistry/" target="_blank">Kirkus Reviews</a></p>
-					<!--The fourth book content
-						<h4 id="wolfhall">Wolf Hall (Hillary Mantel, date)</h4>
-						<figure class="WolfHallDustJacket">
-							<img alt="Dust jacket image for Wolf Hall, bold white lettering on red background." src="images/WolfHall.png">
-						</figure>
-						<p>Text about the third book</p>
-						<p>--<a href="https://www.kirkusreviews.com/book-reviews/madeline-miller/circe/" target="_blank">Kirkus Reviews</a></p>-->
-					<p>Our Main sale offers adult books, CDs, DVDs, records, and magazines. Hardcover books start at $1.00 and paperback books start at $0.50. Main sale hours are <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span>. The Main room faces East Charleston Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
 					<h4 id="otherbooks">Other Books We've Loved</h4>
 					<ul>
 						<li><a alt="The Great Gatsby, a novel written by F. Scott Fitzgerald in 1925">The Great Gatsby (F. Scott Fitzgerald, 1925)</a></li>
@@ -93,11 +84,7 @@
 						<li><a alt="The Known World, a novel written by Edward P. Jones in 2003">The Known World (Edward P. Jones, 2003)</a></li>
 						<li><a alt="The Worst Hard Time, a non-fiction work written by Timothy Egan in 2006">The Worst Hard Time (Timothy Egan, 2006)</a></li>
 					</ul> 
-					<p>List goes here are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Children's sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i></p>
-					<p>The Children's sale room faces the Greendell School and San Antonio Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. While you're shopping early on SAT, you need to limit your selections to 12 items: just bring them to the cashiers to hold until you are ready to pay for all of your purchases. Not sure about what to buy for that grandchild or teacher? Our gift certificates (available in $5.00 denominations) make great gifts! Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
-					<p>Friends of the Palo Alto Library (FOPAL) is a member-supported 501(c)(3) non-profit organization dedicated to supporting the <a href="https://library.cityofpaloalto.org/" target="_blank">Palo Alto City Library</a> and its users through volunteerism, book sales, and advocacy. Established in 1938, FOPAL has grown with the library community it serves.
-Our volunteers conduct monthly and online sales of books and other media donated by the community. Net proceeds from our sales are used for the purchase of books, media, online resources, equipment, and special programs for Palo Alto’s five public libraries.</p>
-				<!--</p>-->
+					<p>Maybe some more content here about joining the next meeting and/or checking books out of the library</p>
 				</article>
 		</main>
 		<footer id="page-footer">
