--- a/finalproject.html
+++ b/finalproject.html
@@ -96,7 +96,7 @@ Our volunteers conduct monthly and online sales of books and other media donated
 					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the library website">Library</a></li>
 				</ul>
 			</nav>
-			<p>Copyright 2025; LBedner lbedner@my.dom.edu.</p>
+			<p><span style="color: white;>Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
 			<p><i>Cat sleeping on a pile of books</i>, Image by (Hovee, Nate) via iStock (Asset ID: 1271623554), Editorial use only</p>
 			<p><i>Cat Sitting on a Stack of Books</i>, Image by (Nilov, Mikhail) via Pexels (ID: blah), <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
 			<p><i>Map image</i> courtesy of Friends of the Palo Alto Library (FOPAL), from <a href="https://www.fopal.org/" target="_blank">fopal.org</a></p>
