--- a/obocpage.html
+++ b/obocpage.html
@@ -87,7 +87,7 @@
 					<li><a href="https://www.kirkusreviews.com/" alt="go to the Kirkus Reviews website">Kirkus Reviews</a></li>
 				</ul>
 			</nav>
-			<p>Copyright 2025; LBedner lbedner@my.dom.edu.</p>
+			<p><span style="color: blue;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
 			<p><i>Book jacket image is a screenshot of an image from somebody's website</i></p>
 			<p><i>Book descriptions are slightly condensed versions of Kirkus Reviews content</i>
 			<p><i>Cat Sitting on a Stack of Books</i>, Image by (Nilov, Mikhail) via Pexels (ID: blah), <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
