--- a/finalproject.html
+++ b/finalproject.html
@@ -49,13 +49,11 @@
 							</li>
 						</ul>
 					</nav>
-					<p>Looking for your next read, friends to read with something</p>
+					<p>Join our monthly Library Book Club, a welcoming community of readers who enjoy thoughtful conversation and the shared experience of great books. We meet once a month to explore literary fiction—from contemporary award-winners to timeless classics—with an occasional nonfiction title that sparks curiosity and discussion.</p>
+					<p>Our group is friendly, relaxed, and always open to new members. Whether you love diving deep into characters and themes or simply enjoy discovering new stories with others, you’ll find a place here. Come for the books, stay for the community, and be part of engaging conversations that connect us through the joy of reading.</p>
 					<figure class="header-catandbooks">
 						<img alt="Cartoon drawing of a content cat sitting on a shelf of books." src="images/catandbooksdrawing.jpg">
 					</figure>
-					<p>We offer items for adults and children. Prices start from $0.25 to $1, and there are Sunday specials. 100% of your purchase goes to the library. We are conveniently located at the <a href="#roommap" alt="go to map of sale rooms">Cubberley Community Center</a>. Hours vary by sale room, but all rooms are open <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span></p>
-					<p>Our friendly sales people will help you find treasures in the stacks without sales tax. Need a present? Our gift certificates are available in $5.00 denominations. You can find more information about the <a href="#mainsaleinfo" alt="go to main sale info">Main sale</a>, <a href="#childrensaleinfo" alt="go to children's sale info">Children's sale</a>, and <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> by clicking the links</p>
-					<p>Join us for fun and community...cats &#x1f431 will not be offered for sale or adoption</p>
 				</header>
     		</article>
 				<article>
