--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -40,13 +40,11 @@
 							</li>
 						</ul>
 					</nav>
-					<p>Text about great books here</p>
+					<p>Reading great books does more than entertain — it opens doors. The right story can make you think, challenging your ideas and expanding your understanding of the world. Books can transport you to distant places and different eras, offering a chance to explore lives far from your own. They introduce you to unique, unforgettable characters whose journeys stay with you long after you close the cover. And through their struggles, hopes, and perspectives, stories help us build empathy, connecting us to experiences we may never encounter in everyday life.</p>
+					<p>Great books enrich us — mind, heart, and spirit — and remind us of the power of stories to illuminate, inspire, and unite.</p>
 					<!--<figure class="header-catandbooks">
 						<img alt="Cartoon drawing of a content cat sitting on a book shelf in soothing colors." src="images/catandbooksdrawing.jpg">
 					</figure>-->
-					<p>We offer items for adults and children. Prices start from $0.25 to $1, and there are Sunday specials. 100% of your purchase goes to the library. We are conveniently located at the <a href="#roommap" alt="go to map of sale rooms">Cubberley Community Center</a>. Hours vary by sale room, but all rooms are open <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span></p>
-					<p>Our friendly sales people will help you find treasures in the stacks without sales tax. Need a present? Our gift certificates are available in $5.00 denominations. You can find more information about the <a href="#mainsaleinfo" alt="go to main sale info">Main sale</a>, <a href="#childrensaleinfo" alt="go to children's sale info">Children's sale</a>, and <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> by clicking the links</p>
-					<p>Join us for fun and community...cats &#x1f431 will not be offered for sale or adoption</p>
 				</header>
     		</article>
 				<article>
