--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -82,7 +82,7 @@
 						<li><a alt="The Known World, a novel written by Edward P. Jones in 2003">The Known World (Edward P. Jones, 2003)</a></li>
 						<li><a alt="The Worst Hard Time, a non-fiction work written by Timothy Egan in 2006">The Worst Hard Time (Timothy Egan, 2006)</a></li>
 					</ul> 
-					<p>Maybe some more content here about joining the next meeting and/or checking books out of the library</p>
+					<p>Bring your favorite book(s) and reading ideas to our next meeting!</p>
 				</article>
 		</main>
 		<footer id="page-footer">
@@ -97,8 +97,9 @@
 			<p><span style="color: blue;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
 			<p><i>Book jacket images are screenshots of images from the Amazon website</i></p>
 			<p><i>Book descriptions are slightly condensed versions of Kirkus Reviews content</i>
-			<p><i>Cat Sitting on a Stack of Books</i>, Image by (Nilov, Mikhail) via Pexels (ID: blah), <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
-			<p><i>Map image</i> courtesy of Friends of the Palo Alto Library (FOPAL), from <a href="https://www.fopal.org/" target="_blank">fopal.org</a></p>
+			<p><i>Cat sitting on a shelf of books</i>, Image by (Natalie_) via iStock (ID: 905536612), <a href="https://www.istockphoto.com/help/licenses" target="_blank">Standard License</a></p>
+			<p><i>Introduction paragraph</i> written with help from OpenAI's ChatGPT <a href="https://chatgpt.com/" target="_blank">chatgpt.com</a></p>
+			
 		</footer>
 	</body>
 </html>
