--- a/obocpage.html
+++ b/obocpage.html
@@ -67,12 +67,12 @@
 						<p>Major themes include the importance of family and sisterhood, the pursuit of personal identity, the tension between societal expectations and individual ambition—especially for women—and the idea that love can take many forms beyond romance.</p>
 					<!--Films content-->
 						<h4 id="LWMovies">Little Women in Film</h4>
-						<p>Did you know there are multiple film versions of Little Women? You can find many of them on DVD and/or Bluray at the library. Here's a list</p>
+						<p>Did you know there are multiple film versions of Little Women? Enhance your reading of Hello Beautiful and Alcott's novel with a movie night. You can find many of these films on DVD and/or Bluray at the library:</p>
 	          			<ul>
-							<li><a alt="Little Women, a film directed by Greta Gerwig released in 2019.">Little Women (Greta Gerwig, 2019)</a></li>
+							<li><a alt="Little Women, a film directed by Greta Gerwig released in 2019.">Little Women (Greta Gerwig, 2019) with Saorise Ronan, Emma Watson, and Timothee Chalamet</a></li>
 				  			<li><a alt="Little Women, a BBC mini-series directed by Vanessa Caswill released in 2017.">Little Women (mini-series) (Vanessa Caswill, 2017)</a></li>
-							<li><a alt="Little Women, a film directed by Gillian Armstrong released in 1994.">Little Women (Gillian Armstrong, 1994)</a></li>
-							<li><a alt="Little Women, a film directed by someone in 1949">Little Women (director, 1949)</a></li>
+							<li><a alt="Little Women, a film directed by Gillian Armstrong released in 1994.">Little Women (Gillian Armstrong, 1994) with Winona Ryder and Susan Sarandon</a></li>
+							<li><a alt="Little Women, a film directed by Mervyn LeRoy in 1949">Little Women (Mervyn LeRoy, 1949)</a></li>
 							<li><a alt="Little Women, a film directed by George Cukor in 1933">Little Women (George Cukor, 1933)</a></li>
 							<li><a alt="Little Women, two silent films released in 1917 and 1918">Little Women (silent films, 1917 and 1918)</a></li>
 						</ul>
@@ -88,8 +88,8 @@
 				</ul>
 			</nav>
 			<p><span style="color: blue;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
-			<p><i>Book jacket image is a screenshot of an image from somebody's website</i></p>
-			<p><i>Book descriptions are slightly condensed versions of Kirkus Reviews content</i>
+			<p><i>Hello Beautiful dust jacket image is a screenshot of an image from somebody's website</i></p>
+			<p><i>Hello Beautiful book descriptions from Kirkus Reviews</i>
 			<p><i>Cat Sitting on a Stack of Books</i>, Image by (Nilov, Mikhail) via Pexels (ID: blah), <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
 			<p><i>Map image</i> courtesy of Friends of the Palo Alto Library (FOPAL), from <a href="https://www.fopal.org/" target="_blank">fopal.org</a></p>
 		</footer>
