--- a/obocpage.html
+++ b/obocpage.html
@@ -69,7 +69,7 @@
 						<h4 id="LWMovies">Little Women in Film</h4>
 						<p>Did you know there are multiple film versions of Little Women? Enhance your reading of Hello Beautiful and Alcott's novel with a movie night. You can find many of these films on DVD and/or Bluray at the library:</p>
 	          			<ul>
-							<li><a alt="Little Women, a film directed by Greta Gerwig released in 2019.">Little Women (Greta Gerwig, 2019) with Saorise Ronan, Emma Watson, and Timothee Chalamet</a></li>
+							<li><a alt="Little Women, a film directed by Greta Gerwig released in 2019.">Little Women (Greta Gerwig, 2019) with Saoirse Ronan, Emma Watson, and Timothee Chalamet</a></li>
 				  			<li><a alt="Little Women, a BBC mini-series directed by Vanessa Caswill released in 2017.">Little Women (mini-series) (Vanessa Caswill, 2017)</a></li>
 							<li><a alt="Little Women, a film directed by Gillian Armstrong released in 1994.">Little Women (Gillian Armstrong, 1994) with Winona Ryder and Susan Sarandon</a></li>
 							<li><a alt="Little Women, a film directed by Mervyn LeRoy in 1949">Little Women (Mervyn LeRoy, 1949)</a></li>
@@ -88,10 +88,10 @@
 				</ul>
 			</nav>
 			<p><span style="color: blue;">Copyright 2025; LBedner lbedner@my.dom.edu.</span></p>
-			<p><i>Hello Beautiful dust jacket image is a screenshot of an image from somebody's website</i></p>
-			<p><i>Hello Beautiful book descriptions from Kirkus Reviews</i>
-			<p><i>Cat Sitting on a Stack of Books</i>, Image by (Nilov, Mikhail) via Pexels (ID: blah), <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
-			<p><i>Map image</i> courtesy of Friends of the Palo Alto Library (FOPAL), from <a href="https://www.fopal.org/" target="_blank">fopal.org</a></p>
+			<p><i>Hello Beautiful dust jacket image</i> is a screenshot of an image from <a href="https://www.fopal.org/" target="_blank">fopal.org</a></p>
+			<p><i>Hello Beautiful book description</i> is from Kirkus Reviews <a href="https://www.fopal.org/" target="_blank">fopal.org</a></p>
+			<p><i>Little Women film poster</i> is a screenshot of an image from <a href="https://www.pexels.com/license/" target="_blank">Pexels License</a></p>
+			<p><i>Introduction paragraph & Little Women novel synopsis text</i> written with the help of OpenAI's ChatGPT <a href="https://chatgpt.com/" target="_blank">chatgpt.com</a></p>
 		</footer>
 	</body>
 </html>
