--- a/finalproject.html
+++ b/finalproject.html
@@ -58,7 +58,7 @@
     		</article>
 				<article>
 				<!--<p>-->
-					<h1 id="mainsaleinfo">Main sale</h1>
+					<h1 id="Whattoexpect">What to expect</h1>
 					<figure class="main-catandbooks">
 						<img alt="long haired brown cat sitting with stacks of colorful children's books." src="https://images.pexels.com/photos/17974848/pexels-photo-17974848.jpeg?_gl=1*u1qdtg*_ga*MTIzNzYyNTQzNS4xNzYwNjMwNzQw*_ga_8JE65Q40S6*czE3NjA2MzYwNjckbzIkZzEkdDE3NjA2MzYxMjkkajU5JGwwJGgw">	
 					</figure>
@@ -67,7 +67,7 @@
 					<p>Your tickets reserve you places in line when the sale starts at 11AM. You are free to get coffee or check out our Children's and Bargain sales in the meantime. Just get back to the Main room a few minutes before 11AM: you'll forfeit your spot(s) if you're not present. No ticket, no problem! Just join the line and we'll let you in as soon as we can.</p>
 					<p>We love our early shoppers, but during the first hour of the SAT sale there is a 12 book limit on purchases. You may rejoin the line to enter again. The 12 book limit remains in effect until there is no line</p>
 					<p>Why the numbers and line and puchase limit? We care about your health and safety, and the size of our Main room limits occupancy to 160 people. Our ticketing system allows early shopping. Our line system and purchase limit allow walk-up customers access. Everybody wins, and so does the library!</p>
-					<h2 id="childrensaleinfo">Children's sale</h2>
+					<h2 id="whyjoinus">Why join us</h2>
 					<p>Our Children's sale offers books, CDs, DVDs, and toys. Parents and teachers, check us out! We have picture books, youth fiction & non-fiction, and non-Enlish language books. Many prices are $0.50 or $1.00. Children's sale hours are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Children's sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i></p>
 					<p>The Children's sale room faces the Greendell School and San Antonio Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. While you're shopping early on SAT, you need to limit your selections to 12 items: just bring them to the cashiers to hold until you are ready to pay for all of your purchases. Not sure about what to buy for that grandchild or teacher? Our gift certificates (available in $5.00 denominations) make great gifts! Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
 					<h3 id="bargainsaleinfo">Bargain sale</h3>
