--- a/finalproject.html
+++ b/finalproject.html
@@ -18,7 +18,7 @@
 		<main id="main-content">
     		<article>
       			<header>
-					<h1 id="mainpage-title"><img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle"/>The Whippoorwill Book Club</h1>
+					<h1 id="mainpage-title"><img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" style="vertical-align: middle;"/>The Whippoorwill Book Club</h1>
 					<!--<div class="header">
   						<h1 id="mainpage-title">The Whippoorwill Book Club</h1>
 						<img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" />
