--- a/finalproject.html
+++ b/finalproject.html
@@ -59,10 +59,8 @@
 				<article>
 					<!--What to expect section-->
 						<h1 id="Whattoexpect">What to expect</h1>
-						<p>You may have some questions about our club. Here's what you can expect when you check us out: <span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span>.</p>
-						<p>If you want first crack on SAT, we use a ticketing system to ensure smooth traffic flow. We hand out up to 2 numbered tickets per person at the Main sale door, starting at 8AM.</p>
-						<p>Your tickets reserve you places in line when the sale starts at 11AM. You are free to get coffee or check out our Children's and Bargain sales in the meantime. Just get back to the Main room a few minutes before 11AM: you'll forfeit your spot(s) if you're not present. No ticket, no problem! Just join the line and we'll let you in as soon as we can.</p>
-						<p>We love our early shoppers, but during the first hour of the SAT sale there is a 12 book limit on purchases. You may rejoin the line to enter again. The 12 book limit remains in effect until there is no line</p>
+						<p>You may have some questions about our club. Here's what you can expect when you check us out:</p> <!--<span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span>.-->
+						
 						<p>Why the numbers and line and puchase limit? We care about your health and safety, and the size of our Main room limits occupancy to 160 people. Our ticketing system allows early shopping. Our line system and purchase limit allow walk-up customers access. Everybody wins, and so does the library!</p>
 					<!--Why join us section-->
 						<h2 id="whyjoinus">Why join us</h2>
