--- a/finalproject.html
+++ b/finalproject.html
@@ -60,8 +60,15 @@
 					<!--What to expect section-->
 						<h1 id="Whattoexpect">What to expect</h1>
 						<p>You may have some questions about our club. Here's what you can expect when you check us out:</p> <!--<span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span>.-->
-						
-						<p>Why the numbers and line and puchase limit? We care about your health and safety, and the size of our Main room limits occupancy to 160 people. Our ticketing system allows early shopping. Our line system and purchase limit allow walk-up customers access. Everybody wins, and so does the library!</p>
+						<ul>
+							<li>Monthly meetings at the library — easygoing, welcoming, and inclusive</li>
+							<li>Flexibility — attend every month or once a year, and you don’t have to finish the book to join the discussion</li>
+							<li>Books reserved for you ahead of time — read at your own pace, and you don’t have to be an Indian Trails Library member/cardholder to participate</li>
+							<li>Engaging discussions about characters, themes, ideas, and perspectives</li>
+							<li>A warm, friendly group where all voices are valued</li>
+							<li>Light refreshments — several members enjoy baking and coffee/tea provided</li>
+						</ul> 
+						<p>maybe a closing statement here</p>
 					<!--Why join us section-->
 						<h2 id="whyjoinus">Why join us</h2>
 						<figure class="main-catandbooks">
