--- a/finalproject.html
+++ b/finalproject.html
@@ -18,7 +18,7 @@
 		<main id="main-content">
     		<article>
       			<header>
-					<h1 id="mainpage-title"><img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" style="vertical-align: middle;"/>The Whippoorwill Book Club</h1>
+					<h1 id="mainpage-title">The Whippoorwill Book Club<img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" style="vertical-align: middle;"/></h1>
 					<!--<div class="header">
   						<h1 id="mainpage-title">The Whippoorwill Book Club</h1>
 						<img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" />
@@ -74,8 +74,18 @@
 						<figure class="main-catandbooks">
 							<img alt="long haired brown cat sitting with stacks of colorful children's books." src="https://images.pexels.com/photos/17974848/pexels-photo-17974848.jpeg?_gl=1*u1qdtg*_ga*MTIzNzYyNTQzNS4xNzYwNjMwNzQw*_ga_8JE65Q40S6*czE3NjA2MzYwNjckbzIkZzEkdDE3NjA2MzYxMjkkajU5JGwwJGgw">	
 						</figure>
-						<p>Our Children's sale offers books, CDs, DVDs, and toys. Parents and teachers, check us out! We have picture books, youth fiction & non-fiction, and non-Enlish language books. Many prices are $0.50 or $1.00. Children's sale hours are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Children's sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i></p>
-						<p>The Children's sale room faces the Greendell School and San Antonio Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. While you're shopping early on SAT, you need to limit your selections to 12 items: just bring them to the cashiers to hold until you are ready to pay for all of your purchases. Not sure about what to buy for that grandchild or teacher? Our gift certificates (available in $5.00 denominations) make great gifts! Check out our <a href="#bargainsaleinfo" alt="go to bargain sale info">Bargain sale</a> for even better deals!</p>
+						<p>There are so many benefits to joining a book club (especially the Whippoorwills) that we can't list them all, but here are a few:</p>
+						<ul>
+							<li>A book group introduces you to authors, genres, and stories you might never pick up on your own. It expands your reading life in surprising and delightful ways.</li>
+							<li>Discussion brings a book to life. Hearing different perspectives deepens your understanding and helps you see themes, characters, and ideas in new ways.</li>
+							<li>Books let you step into someone else’s shoes — and talking about them with others strengthens connection, understanding, and compassion.</li>
+							<li>Exploring why characters make certain choices or discussing a book’s themes helps sharpen your analytical and reflective skills.</li>
+							<li>Book groups create a welcoming space to connect with others. It’s a chance to meet new people, share ideas, and build friendships./li>
+							<li>Knowing you’ll discuss a book gives you a gentle nudge to read regularly — a welcome commitment in a busy life.</li>
+							<li>Taking time each month to read and chat with others is restorative. It’s a break from routines and a chance to unwind with people who enjoy stories as much as you do.</li>
+							<li>Books open doors to history, culture, philosophy, science, and more. Every selection becomes an opportunity to <i></i>learn something new</i>.</li>
+						</ul> 	
+					<p>maybe some closing text here</p>
 					<h3 id="bargainsaleinfo">Bargain sale</h3>
 					<p>Check out the Bargain sale for great deals, AND our Sunday specials! All adult hardback books are $1.00, paperbacks are $0.50, and children's books are only $0.25. You have 2 savings options on Sunday. All items are half-price, or you can purchase a $5.00 bag to fill with as many books as you can jam in there. Bargain sale hours are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Bargain sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i>. The Bargain sale is in Room H2, facing East Charleston Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. Not sure about what to buy for that friend or relative? Our gift certificates (available in $5.00 denominations) make great gifts!</p>
 				</article>
