--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -70,19 +70,21 @@
 						</figure>
 						<p>At the dawn of the 1960s, Elizabeth Zott finds herself in an unexpected position. She's the star of a television program called Supper at Six that has taken American housewives by storm, but it's certainly not what the crass station head envisions: “ 'Meaningful?' Phil snapped. 'What are you? Amish? As for nutritious: no. You’re killing the show before it even gets started.’” Elizabeth is a chemist, recently forced to leave the lab where she was doing important research due to an out-of-wedlock pregnancy. Now she's reduced to explaining things like when to put the steak in the pan. If ever a woman was capable of running her own life, it's Elizabeth. But because it's the 1950s, then the '60s, men have their sweaty paws all over both her successes and failures. On the plus side, there's Calvin Evans, world-famous chemist, love of her life, and father of her child; also Walter Pine, her friend who works in television; and a journalist who at least tries to do the right thing. This is the kind of book that has a long-buried secret at a corrupt orphanage with a mysterious benefactor as well as an extremely intelligent dog named Six-Thirty, recently retired from the military. Garmus' energetic debut also features an invigorating subplot about rowing.</p>
 						<p>--<a href="https://www.kirkusreviews.com/book-reviews/bonnie-garmus/lessons-chemistry/" target="_blank">Kirkus Reviews</a></p>
-					<h4 id="otherbooks">Other Books We've Loved</h4>
-					<ul>
-						<li><a alt="The Great Gatsby, a novel written by F. Scott Fitzgerald in 1925">The Great Gatsby (F. Scott Fitzgerald, 1925)</a></li>
-						<li><a alt="The Time Traveler's Wife, a novel written by Audrey Niffenegger in 2003">The Time Traveler's Wife (Audrey Niffenegger, 2003)</a></li>
-						<li><a alt="Corelli's Mandolin, a novel written by Louis de Bernieris in 1994">Corelli's Mandolin (Louis de Bernieris, 1994)</a></li>
-						<li><a alt="A Gentleman in Moscow, a novel written by Amor Towles in 2016">A Gentleman in Moscow (Amor Towles, 2016)</a></li>
-						<li><a alt="Station Eleven, a novel written by Emily St. John Mandel in 2014">Station Eleven (Emily St. John Mandel, 2014)</a></li>
-						<li><a alt="Lincoln in the Bardo, a novel written by George Saunders in 2017">Lincoln in the Bardo (George Saunders, 2017)</a></li>
-						<li><a alt="Middlemarch, a novel written by George Eliot in 1872">Middlemarch (George Eliot, 1872)</a></li>
-						<li><a alt="The Known World, a novel written by Edward P. Jones in 2003">The Known World (Edward P. Jones, 2003)</a></li>
-						<li><a alt="The Worst Hard Time, a non-fiction work written by Timothy Egan in 2006">The Worst Hard Time (Timothy Egan, 2006)</a></li>
-					</ul> 
-					<p>Bring your favorite book(s) and reading ideas to our next meeting!</p>
+					<!--Other books content-->
+						<h4 id="otherbooks">Other books we've loved</h4>
+						<p>Here are some more reading highlights (by no means exhaustive) to give you an idea of our "vibe"</p>
+						<ul>
+							<li><a alt="The Great Gatsby, a novel written by F. Scott Fitzgerald in 1925">The Great Gatsby (F. Scott Fitzgerald, 1925) - Nick, you should have stayed home</a></li>
+							<li><a alt="The Time Traveler's Wife, a novel written by Audrey Niffenegger in 2003">The Time Traveler's Wife (Audrey Niffenegger, 2003)</a></li>
+							<li><a alt="Corelli's Mandolin, a novel written by Louis de Bernieris in 1994">Corelli's Mandolin (Louis de Bernieris, 1994) - World War 2 love stories</a></li>
+							<li><a alt="A Gentleman in Moscow, a novel written by Amor Towles in 2016">A Gentleman in Moscow (Amor Towles, 2016) - the Count and the willowy woman</a></li>
+							<li><a alt="Station Eleven, a novel written by Emily St. John Mandel in 2014">Station Eleven (Emily St. John Mandel, 2014) - pre-Covid pandemic tale with Shakespeare players keeping art alive</a></li>
+							<li><a alt="Lincoln in the Bardo, a novel written by George Saunders in 2017">Lincoln in the Bardo (George Saunders, 2017) - best audiobook ever</a></li>
+							<li><a alt="Middlemarch, a novel written by George Eliot in 1872">Middlemarch (George Eliot, 1872) - evolving relationships and loyalties in Victorian England</a></li>
+							<li><a alt="The Known World, a novel written by Edward P. Jones in 2003">The Known World (Edward P. Jones, 2003) - slavery and its consequences</a></li>
+							<li><a alt="The Worst Hard Time, a non-fiction work written by Timothy Egan in 2006">The Worst Hard Time (Timothy Egan, 2006) - nonfiction Dust Bowl chronicle</a></li>
+						</ul> 
+						<p>Bring your favorite book(s) and reading ideas to our next meeting!</p>
 				</article>
 		</main>
 		<footer id="page-footer">
