--- a/finalproject.html
+++ b/finalproject.html
@@ -80,10 +80,10 @@
 							<li>Discussion brings a book to life. Hearing different perspectives deepens your understanding and helps you see themes, characters, and ideas in new ways.</li>
 							<li>Books let you step into someone else’s shoes — and talking about them with others strengthens connection, understanding, and compassion.</li>
 							<li>Exploring why characters make certain choices or discussing a book’s themes helps sharpen your analytical and reflective skills.</li>
-							<li>Book groups create a welcoming space to connect with others. It’s a chance to meet new people, share ideas, and build friendships./li>
+							<li>Book groups create a welcoming space to connect with others. It’s a chance to meet new people, share ideas, and build friendships.</li>
 							<li>Knowing you’ll discuss a book gives you a gentle nudge to read regularly — a welcome commitment in a busy life.</li>
 							<li>Taking time each month to read and chat with others is restorative. It’s a break from routines and a chance to unwind with people who enjoy stories as much as you do.</li>
-							<li>Books open doors to history, culture, philosophy, science, and more. Every selection becomes an opportunity to <i></i>learn something new</i>.</li>
+							<li>Books open doors to history, culture, philosophy, science, and more. Every selection becomes an opportunity to <i>learn something new</i>.</li>
 						</ul> 	
 					<p>maybe some closing text here</p>
 					<h3 id="bargainsaleinfo">Bargain sale</h3>
