--- a/finalproject.html
+++ b/finalproject.html
@@ -85,9 +85,13 @@
 							<li>Taking time each month to read and chat with others is restorative. It’s a break from routines and a chance to unwind with people who enjoy stories as much as you do.</li>
 							<li>Books open doors to history, culture, philosophy, science, and more. Every selection becomes an opportunity to <i>learn something new</i>.</li>
 						</ul> 	
-					<p>maybe some closing text here</p>
-					<h3 id="bargainsaleinfo">Bargain sale</h3>
-					<p>Check out the Bargain sale for great deals, AND our Sunday specials! All adult hardback books are $1.00, paperbacks are $0.50, and children's books are only $0.25. You have 2 savings options on Sunday. All items are half-price, or you can purchase a $5.00 bag to fill with as many books as you can jam in there. Bargain sale hours are <span style="color: blue;">10AM-4PM SAT & 1PM-4PM SUN</span>. <i>Note that the Bargain sale opens 1 hour before the Main sale on Saturday, so be early for the best selection</i>. The Bargain sale is in Room H2, facing East Charleston Rd: find it on our <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>. Not sure about what to buy for that friend or relative? Our gift certificates (available in $5.00 denominations) make great gifts!</p>
+					<p>What's not to like? Whether you’re a lifelong reader or just getting started, we’d love to have you.</p>
+					<!--Learn more section-->
+						<h3 id="learnmore">Learn more</h3>
+						<p>There are several ways to learn more about us. Our meetings are included on the Indian Trails Public Library District's <span style="color: blue;">Events calendar</span>. <a href="#roommap" alt="go to map of sale rooms">Sale room map</a>.</p>
+						<p>You can meet some of our members on our About us page</p>
+						<p>You can check out some of our favorite books on our Greatest hits page</p>
+						<p>You can learn about the One Book One Community program and this year's selection, Hello Beautiful by Ann Napolitano, on our One book page</p>
 				</article>
 		</main>
 		<footer id="page-footer">
