--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -74,22 +74,22 @@
 						<h4 id="otherbooks">Other books we've loved</h4>
 						<p>Here are some more reading highlights (by no means exhaustive) to give you an idea of our "vibe"</p>
 						<ul>
-							<li><a alt="The Great Gatsby, a novel written by F. Scott Fitzgerald in 1925">The Great Gatsby (F. Scott Fitzgerald, 1925) - Nick, you should have stayed home</a></li>
-							<li><a alt="The Time Traveler's Wife, a novel written by Audrey Niffenegger in 2003">The Time Traveler's Wife (Audrey Niffenegger, 2003)</a></li>
-							<li><a alt="Corelli's Mandolin, a novel written by Louis de Bernieris in 1994">Corelli's Mandolin (Louis de Bernieris, 1994) - World War 2 love stories</a></li>
-							<li><a alt="A Gentleman in Moscow, a novel written by Amor Towles in 2016">A Gentleman in Moscow (Amor Towles, 2016) - the Count and the willowy woman</a></li>
-							<li><a alt="Station Eleven, a novel written by Emily St. John Mandel in 2014">Station Eleven (Emily St. John Mandel, 2014) - pre-Covid pandemic tale with Shakespeare players keeping art alive</a></li>
-							<li><a alt="Lincoln in the Bardo, a novel written by George Saunders in 2017">Lincoln in the Bardo (George Saunders, 2017) - best audiobook ever</a></li>
-							<li><a alt="Middlemarch, a novel written by George Eliot in 1872">Middlemarch (George Eliot, 1872) - evolving relationships and loyalties in Victorian England</a></li>
-							<li><a alt="The Known World, a novel written by Edward P. Jones in 2003">The Known World (Edward P. Jones, 2003) - slavery and its consequences</a></li>
-							<li><a alt="The Worst Hard Time, a non-fiction work written by Timothy Egan in 2006">The Worst Hard Time (Timothy Egan, 2006) - nonfiction Dust Bowl chronicle</a></li>
+							<li><a alt="The Great Gatsby, a novel written by F. Scott Fitzgerald in 1925"><i>The Great Gatsby</i> (F. Scott Fitzgerald, 1925) - Nick, you should have stayed home</a></li>
+							<li><a alt="The Time Traveler's Wife, a novel written by Audrey Niffenegger in 2003"><i>The Time Traveler's Wife</i> (Audrey Niffenegger, 2003)</a></li>
+							<li><a alt="Corelli's Mandolin, a novel written by Louis de Bernieris in 1994"><i>Corelli's Mandolin</i> (Louis de Bernieris, 1994) - World War 2 love stories</a></li>
+							<li><a alt="A Gentleman in Moscow, a novel written by Amor Towles in 2016"><i>A Gentleman in Moscow</i> (Amor Towles, 2016) - the Count and the willowy woman</a></li>
+							<li><a alt="Station Eleven, a novel written by Emily St. John Mandel in 2014"><i>Station Eleven</i> (Emily St. John Mandel, 2014) - pre-Covid pandemic tale with Shakespeare players keeping art alive</a></li>
+							<li><a alt="Lincoln in the Bardo, a novel written by George Saunders in 2017"><i>Lincoln in the Bardo</i> (George Saunders, 2017) - best audiobook ever</a></li>
+							<li><a alt="Middlemarch, a novel written by George Eliot in 1872"><i>Middlemarch</i> (George Eliot, 1872) - evolving relationships and loyalties in Victorian England</a></li>
+							<li><a alt="The Known World, a novel written by Edward P. Jones in 2003"><i>The Known World</i> (Edward P. Jones, 2003) - slavery and its consequences</a></li>
+							<li><a alt="The Worst Hard Time, a non-fiction work written by Timothy Egan in 2006"><i>The Worst Hard Time</i> (Timothy Egan, 2006) - nonfiction Dust Bowl chronicle</a></li>
 						</ul> 
 						<p>Bring your favorite book(s) and reading ideas to our next meeting!</p>
 				</article>
 		</main>
 		<footer id="page-footer">
 			<nav>
-				<ul> <!--can add classes here later-->
+				<ul>
 					<li><a href="#greatestpage-title" alt="go to the top of the page">Home</a></li>
 					<li><a href="finalproject.html" alt="go to the Whippoorwill Book Club main page">WBC main page</a></li>
 					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the Indian Trails Public Library District website">Library (ITPLD)</a></li>
