--- a/finalproject.html
+++ b/finalproject.html
@@ -76,13 +76,13 @@
 						</figure>
 						<p>There are so many benefits to joining a book club (especially the Whippoorwills) that we can't list them all, but here are a few:</p>
 						<ul>
-							<li>A book group introduces you to authors, genres, and stories you might never pick up on your own. It expands your reading life in surprising and delightful ways.</li>
-							<li>Discussion brings a book to life. Hearing different perspectives deepens your understanding and helps you see themes, characters, and ideas in new ways.</li>
-							<li>Books let you step into someone else’s shoes — and talking about them with others strengthens connection, understanding, and compassion.</li>
-							<li>Exploring why characters make certain choices or discussing a book’s themes helps sharpen your analytical and reflective skills.</li>
-							<li>Book groups create a welcoming space to connect with others. It’s a chance to meet new people, share ideas, and build friendships.</li>
-							<li>Knowing you’ll discuss a book gives you a gentle nudge to read regularly — a welcome commitment in a busy life.</li>
-							<li>Taking time each month to read and chat with others is restorative. It’s a break from routines and a chance to unwind with people who enjoy stories as much as you do.</li>
+							<li>A book group introduces you to authors, genres, and stories you might never pick up on your own. It <i>expands your reading life</i> in surprising and delightful ways.</li>
+							<li><i>Discussion brings a book to life</i>. Hearing different perspectives deepens your understanding and helps you see themes, characters, and ideas in new ways.</li>
+							<li>Books let you <i>step into someone else’s shoes</i> — and talking about them with others strengthens connection, understanding, and compassion.</li>
+							<li>Exploring why characters make certain choices or discussing a book’s themes helps <i>sharpen your analytical and reflective skills</i>.</li>
+							<li>Book groups create a welcoming space to <i>connect with others</i>. It’s a chance to meet new people, share ideas, and build friendships.</li>
+							<li>Knowing you’ll discuss a book gives you a <i>gentle nudge to read regularly</i> — a welcome commitment in a busy life.</li>
+							<li>Taking time each month to read and chat with others is restorative. It’s a break from routines and a <i>chance to unwind</i> with people who enjoy stories as much as you do.</li>
 							<li>Books open doors to history, culture, philosophy, science, and more. Every selection becomes an opportunity to <i>learn something new</i>.</li>
 						</ul> 	
 					<p>What's not to like? Whether you’re a lifelong reader or just getting started, we’d love to have you.</p>
@@ -96,7 +96,7 @@
 		</main>
 		<footer id="page-footer">
 			<nav>
-				<ul> <!--can add classes here later-->
+				<ul>
 					<li><a href="#mainpage-title" alt="go to the top of the page">Home</a></li>
 					<li><a href="https://www.indiantrailslibrary.org/" alt="go to the library website">Library</a></li>
 				</ul>
