--- a/finalproject.html
+++ b/finalproject.html
@@ -71,8 +71,8 @@
 						<p>maybe a closing statement here</p>
 					<!--Why join us section-->
 						<h2 id="whyjoinus">Why join us</h2>
-						<figure class="main-catandbooks">
-							<img alt="long haired brown cat sitting with stacks of colorful children's books." src="https://images.pexels.com/photos/17974848/pexels-photo-17974848.jpeg?_gl=1*u1qdtg*_ga*MTIzNzYyNTQzNS4xNzYwNjMwNzQw*_ga_8JE65Q40S6*czE3NjA2MzYwNjckbzIkZzEkdDE3NjA2MzYxMjkkajU5JGwwJGgw">	
+						<figure class="dogandbook">
+							<img alt="cartoon picture of dog with paws on a an open book reading." src="images/dogreadingbook.jpg">	
 						</figure>
 						<p>There are so many benefits to joining a book club (especially the Whippoorwills) that we can't list them all, but here are a few:</p>
 						<ul>
