--- a/obocpage.html
+++ b/obocpage.html
@@ -66,15 +66,15 @@
 						<p>As the sisters grow into adulthood, they face loss, changing relationships, and the realization that their paths in life will be different but equally meaningful.</p>	
 						<p>Major themes include the importance of family and sisterhood, the pursuit of personal identity, the tension between societal expectations and individual ambition—especially for women—and the idea that love can take many forms beyond romance.</p>
 					<!--Films content-->
-						<h4 id="LWMovies">Little Women in Film</h4>
+						<h4 id="LWMovies">Little Women in film</h4>
 						<p>Did you know there are multiple film versions of Little Women? Enhance your reading of Hello Beautiful and Alcott's novel with a movie night. You can find many of these films on DVD and/or Bluray at the library:</p>
 	          			<ul>
-							<li><a alt="Little Women, a film directed by Greta Gerwig released in 2019.">Little Women (Greta Gerwig, 2019) with Saoirse Ronan, Emma Watson, and Timothee Chalamet</a></li>
-				  			<li><a alt="Little Women, a BBC mini-series directed by Vanessa Caswill released in 2017.">Little Women (mini-series) (Vanessa Caswill, 2017)</a></li>
-							<li><a alt="Little Women, a film directed by Gillian Armstrong released in 1994.">Little Women (Gillian Armstrong, 1994) with Winona Ryder and Susan Sarandon</a></li>
-							<li><a alt="Little Women, a film directed by Mervyn LeRoy in 1949">Little Women (Mervyn LeRoy, 1949)</a></li>
-							<li><a alt="Little Women, a film directed by George Cukor in 1933">Little Women (George Cukor, 1933)</a></li>
-							<li><a alt="Little Women, two silent films released in 1917 and 1918">Little Women (silent films, 1917 and 1918)</a></li>
+							<li><a alt="Little Women, a film directed by Greta Gerwig released in 2019."><i>Little Women</i> (Greta Gerwig, 2019) with Saoirse Ronan, Emma Watson, and Timothee Chalamet</a></li>
+				  			<li><a alt="Little Women, a BBC mini-series directed by Vanessa Caswill released in 2017."><i>Little Women</i> (BBC mini-series) (Vanessa Caswill, 2017)</a></li>
+							<li><a alt="Little Women, a film directed by Gillian Armstrong released in 1994."><i>Little Women</i> (Gillian Armstrong, 1994) with Winona Ryder and Susan Sarandon</a></li>
+							<li><a alt="Little Women, a film directed by Mervyn LeRoy in 1949"><i>Little Women</i> (Mervyn LeRoy, 1949)</a></li>
+							<li><a alt="Little Women, a film directed by George Cukor in 1933"><i>Little Women</i> (George Cukor, 1933)</a></li>
+							<li><a alt="Little Women, two silent films released in 1917 and 1918"><i>Little Women</i> (silent films, 1917 and 1918)</a></li>
 						</ul>
 				</article>
 		</main>
