--- a/finalproject.html
+++ b/finalproject.html
@@ -71,7 +71,7 @@
 						<p>maybe a closing statement here</p>
 					<!--Why join us section-->
 						<h2 id="whyjoinus">Why join us</h2>
-						<figure class="dogandbook">
+						<figure class="dogreadingbook">
 							<img alt="cartoon picture of dog with paws on a an open book reading." src="images/dogreadingbook.jpg">	
 						</figure>
 						<p>There are so many benefits to joining a book club (especially the Whippoorwills) that we can't list them all, but here are a few:</p>
