--- a/finalproject.html
+++ b/finalproject.html
@@ -72,7 +72,7 @@
 					<!--Why join us section-->
 						<h2 id="whyjoinus">Why join us</h2>
 						<figure class="dogreadingbook">
-							<img alt="cartoon picture of dog with paws on a an open book reading." src="images/dogreadingbook.jpg">	
+							<img alt="cartoon picture of dog with paws on an open book reading." src="images/dogreadingbook.jpg">	
 						</figure>
 						<p>There are so many benefits to joining a book club (especially the Whippoorwills) that we can't list them all, but here are a few:</p>
 						<ul>
