--- a/finalproject.html
+++ b/finalproject.html
@@ -18,16 +18,8 @@
 		<main id="main-content">
     		<article>
       			<header>
-					<h1 id="mainpage-title">The Whippoorwill Book Club<img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" style="vertical-align: middle;"/></h1>
-					<!--<div class="header">
-  						<h1 id="mainpage-title">The Whippoorwill Book Club</h1>
-						<img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" />
-					</div>-->
-					<!--<figure class="LogoWBC">
-						<img alt="Whippoorwill logo for the book club." src="images/LogoWBCReduced.PNG">
-						<!--<img alt="Whippoorwill logo for the book club." src="images/LogoWhippoorwillBookClub.png">
-					</figure>
-					<h1 id="mainpage-title">The Whippoorwill Book Club</h1>-->
+					<!--<h1 id="mainpage-title">The Whippoorwill Book Club<img src="images/LogoWBCReduced.PNG" alt="Book club logo simple bird in a circle" style="vertical-align: middle;"/></h1>just not a fan of the logo-->
+					<h1 id="mainpage-title">The Whippoorwill Book Club</h1>
 					<h2 id="page-subtitle">Reading, conversation, and community at the library</h2>
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
