--- a/obocpage.html
+++ b/obocpage.html
@@ -18,7 +18,7 @@
 		<main id="main-content">
     		<article>
       			<header>
-					<h1 id="obocpage-title">Whippoorwill and One Book One Community</h1>
+					<h1 id="obocpage-title">Whippoorwill & One Book One Community</h1>
 					<!--<h2 id="page-subtitle">Our Celebration of <span class="booktitleanimation">Hello Beautiful</span></h2>-->
 					<h2 id="page-subtitle">Our Celebration of <span style="color: blue;">Hello Beautiful</span></h2>
 					<!--<p>Posted by: WBC</p>-->
