--- a/obocpage.html
+++ b/obocpage.html
@@ -19,8 +19,8 @@
     		<article>
       			<header>
 					<h1 id="obocpage-title">Whippoorwill & One Book One Community</h1>
-					<!--<h2 id="page-subtitle">Our Celebration of <span class="booktitleanimation">Hello Beautiful</span></h2>-->
-					<h2 id="page-subtitle">Our Celebration of <span style="color: blue;">Hello Beautiful</span></h2>
+					<h2 id="page-subtitle">Our Celebration of <span class="booktitleanimation">Hello Beautiful</span></h2>
+					<!--<h2 id="page-subtitle">Our Celebration of <span style="color: blue;">Hello Beautiful</span></h2>-->
 					<!--<p>Posted by: WBC</p>-->
 					<nav>
 						<ul class="menu-items">
