--- a/finalproject.html
+++ b/finalproject.html
@@ -68,8 +68,8 @@
 						</figure>
 						<p>There are so many benefits to joining a book club (especially the Whippoorwills) that we can't list them all, but here are a few:</p>
 						<ul>
-							<li>A book group introduces you to authors, genres, and stories you might never pick up on your own. It <i>expands your reading life</i> in surprising and delightful ways.</li>
-							<li><i>Discussion brings a book to life</i>. Hearing different perspectives deepens your understanding and helps you see themes, characters, and ideas in new ways.</li>
+							<li>A book group introduces you to authors, genres, and stories you might never pick up on your own. It <i><b>expands your reading life</b></i> in surprising and delightful ways.</li>
+							<li><i><b>Discussion brings a book to life</b></i>. Hearing different perspectives deepens your understanding and helps you see themes, characters, and ideas in new ways.</li>
 							<li>Books let you <i>step into someone else’s shoes</i> — and talking about them with others strengthens connection, understanding, and compassion.</li>
 							<li>Exploring why characters make certain choices or discussing a book’s themes helps <i>sharpen your analytical and reflective skills</i>.</li>
 							<li>Book groups create a welcoming space to <i>connect with others</i>. It’s a chance to meet new people, share ideas, and build friendships.</li>
