--- a/finalproject.html
+++ b/finalproject.html
@@ -54,8 +54,10 @@
 						<p>You may have some questions about our club. Here's what you can expect when you check us out:</p> <!--<span style="color: blue;">11AM-4PM SAT & 1PM-4PM SUN</span>.-->
 						<ul>
 							<li>Monthly meetings at the library — easygoing, welcoming, and inclusive</li>
-							<li>Flexibility — attend every month or once a year, and you don’t have to finish the book to join the discussion</li>
-							<li>Books reserved for you ahead of time — read at your own pace, and you don’t have to be an Indian Trails Library member/cardholder to participate</li>
+							<li>Flexibility — attend every month or once a year</li>
+							<li>Books reserved for you ahead of time — read at your own pace</li>
+							<li>You don’t have to be an Indian Trails Library member/cardholder to participate</li>
+							<li>You don’t have to finish the book to join the discussion</li>
 							<li>Engaging discussions about characters, themes, ideas, and perspectives</li>
 							<li>A warm, friendly group where all voices are valued</li>
 							<li>Light refreshments — several members enjoy baking and coffee/tea provided</li>
@@ -68,14 +70,14 @@
 						</figure>
 						<p>There are so many benefits to joining a book club (especially the Whippoorwills) that we can't list them all, but here are a few:</p>
 						<ul>
-							<li>A book group introduces you to authors, genres, and stories you might never pick up on your own. It <i><b>expands your reading life</b></i> in surprising and delightful ways.</li>
-							<li><i><b>Discussion brings a book to life</b></i>. Hearing different perspectives deepens your understanding and helps you see themes, characters, and ideas in new ways.</li>
-							<li>Books let you <i>step into someone else’s shoes</i> — and talking about them with others strengthens connection, understanding, and compassion.</li>
-							<li>Exploring why characters make certain choices or discussing a book’s themes helps <i>sharpen your analytical and reflective skills</i>.</li>
-							<li>Book groups create a welcoming space to <i>connect with others</i>. It’s a chance to meet new people, share ideas, and build friendships.</li>
-							<li>Knowing you’ll discuss a book gives you a <i>gentle nudge to read regularly</i> — a welcome commitment in a busy life.</li>
-							<li>Taking time each month to read and chat with others is restorative. It’s a break from routines and a <i>chance to unwind</i> with people who enjoy stories as much as you do.</li>
-							<li>Books open doors to history, culture, philosophy, science, and more. Every selection becomes an opportunity to <i>learn something new</i>.</li>
+							<li>A book group introduces you to authors, genres, and stories you might never pick up on your own</li>
+							<li>Discussion brings a book to life</li>
+							<li>Books let you step into someone else’s shoes</li>
+							<li>Exploring why characters make certain choices helps sharpen your analytical and reflective skills</li>
+							<li>Book groups create a welcoming space to connect with others</li>
+							<li>Knowing you’ll discuss a book gives you a gentle nudge to read regularly</li>
+							<li>Taking time each month to read and chat with others is restorative</li>
+							<li>Books open doors to history, culture, philosophy, science, and more</li>
 						</ul> 	
 					<p>What's not to like? Whether you’re a lifelong reader or just getting started, we’d love to have you.</p>
 					<!--Learn more section-->
