--- a/greatesthitspage.html
+++ b/greatesthitspage.html
@@ -40,8 +40,7 @@
 							</li>
 						</ul>
 					</nav>
-					<p>Reading great books does more than entertain — it opens doors. The right story can make you think, challenging your ideas and expanding your understanding of the world. Books can transport you to distant places and different eras, offering a chance to explore lives far from your own. They introduce you to unique, unforgettable characters whose journeys stay with you long after you close the cover. And through their struggles, hopes, and perspectives, stories help us build empathy, connecting us to experiences we may never encounter in everyday life.</p>
-					<p>Great books enrich us — mind, heart, and spirit — and remind us of the power of stories to illuminate, inspire, and unite.</p>
+					<p>Reading great books does more than entertain — it opens doors. The right story can make you think, challenging your ideas and expanding your understanding of the world. Books can transport you to distant places and different eras, offering a chance to explore lives far from your own. They introduce you to unique, unforgettable characters whose journeys stay with you long after you close the cover. And through their struggles, hopes, and perspectives, stories help us build empathy, connecting us to experiences we may never encounter in everyday life. Here are some of our favorites.</p>
 					<!--<figure class="header-catandbooks">
 						<img alt="Cartoon drawing of a content cat sitting on a book shelf in soothing colors." src="images/catandbooksdrawing.jpg">
 					</figure>-->
